[package]
name = "kaspa-rust-bot"
version = "2.0.0"
edition = "2021"
description = "High-performance Kaspa Node Telegram Bot"

[dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1.36", features = ["full"] }
teloxide = { version = "0.12", features = ["macros", "rustls"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
dashmap = "5.5"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.30"

regex = "1.10"

chrono = "0.4"
once_cell = "1.21.4"
tokio-util = "0.7.18"
secrecy = "0.10.3"
