[package]
name = "kaspa-rust-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.32"
moka = { version = "0.12.15", features = ["future"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Kaspa Native Core & wRPC (Golden Standard Git Integration)
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git" }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git" }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
sysinfo = "0.38.4"
regex = "1.12.3"
tracing-appender = "0.2.4"
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", version = "1.1.0" }
