[package]
name = "kaspa-rust-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.32"
moka = { version = "0.12.15", features = ["future", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
teloxide = { version = "0.17.0", features = ["macros", "rustls"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
sysinfo = "0.38.4"
regex = "1.12.3"
tracing-appender = "0.2.4"
rev_lines = "0.3.0"

kaspa-wrpc-client = "0.15.0"
kaspa-rpc-core = "0.15.0"
kaspa-consensus-core = "0.15.0"
kaspa-addresses = "0.15.0"
kaspa-hashes = "0.15.0"
log = "0.4.29"
